fix(ui): ensure when two+ angular components are in a #view, they don't all stretch to fill space [c9s-71] (#2133)

--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -66,11 +66,14 @@ body,
   position: relative;
 }
 
-/* ensure that the parent page containers (from the router) stretch to fit available space */
 #view > .ng-isolate-scope {
-  flex: 1 0 auto;
   display: flex;
   flex-direction: column;
+}
+/* some angular views have multiple child elements, so only apply the flex styles to the only child */
+/* ensure that the parent page containers (from the router) stretch to fit available space */
+#view > :only-child.ng-isolate-scope {
+  flex: 1 0 auto;
 }
 
 .logo {
